[project]
name = "starfall"
version = "0.1.0"
description = "AI agent for SQL Server to Postgres index translation"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "ipython>=9.7.0",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.0.3",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "llm-factory>=0.0.3.1",
    "mlflow>=3.5.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "ragas>=0.3.8",
    "tavily>=1.1.0",
    "pypdf>=6.1.3",
    "ipywidgets>=8.1.8",
    "langchain-chroma>=1.0.0",
]
